--- a/translations/kangyur/translations/091-073_toh675-the_aparimitayurjnana_sutra_2.xml
+++ b/translations/kangyur/translations/091-073_toh675-the_aparimitayurjnana_sutra_2.xml
@@ -31,7 +31,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-50">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.4 <date>2022</date>
+                <edition>v 1.1.5 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -63,7 +63,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-13T17:23:52.317Z" user="admin">13/05/2022 17:23:52</note>
+                <note type="lastUpdated" date-time="2022-06-27T14:01:13.131Z" user="admin">27/06/2022 14:01:13</note>
                 
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:25:23.489Z" user="mike">2.d</note>
@@ -83,6 +83,7 @@
     <note type="updated" update="text-version" value="1.1.2" date-time="2021-06-23T14:34:04.462Z" user="john">Added a few details in some passages.</note>
     <note type="updated" update="text-version" value="1.1.3" date-time="2022-01-06T20:31:18.911Z" user="celso">activated pending link</note>
     <note type="updated" update="text-version" value="1.1.4" date-time="2022-05-13T17:23:48.565Z" user="martina-cotter">Added pending links.</note>
+    <note type="updated" update="text-version" value="1.1.5" date-time="2022-06-27T14:01:09.353Z" user="john">Typo corrected</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -547,7 +548,7 @@
                              might refer. Tibetan authors took pains to distinguish between, on the one hand, “Amitāyus of the zenith” (<foreign xml:lang="Bo-Ltn">steng phyogs kyi tshe dpag
                                 med</foreign>) and “Amitāyus of Akaniṣṭha” (<foreign xml:lang="Bo-Ltn">’og min gyi tshe dpag
                                     med</foreign>), both likely to be references to Aparimitāyur­jñāna; and on the
-                            other, “Amitāyus of Sukhāvatī” (<foreign xml:lang="Bo-Ltn">de ba can gyi tshe dpag
+                            other, “Amitāyus of Sukhāvatī” (<foreign xml:lang="Bo-Ltn">bde ba can gyi tshe dpag
                                 med</foreign>), also sometimes known as “Amitāyus of the Drum of Immortality” (<foreign xml:lang="Bo-Ltn">’chi med rnga sgra’i tshe dpag med</foreign>, Dundubhisvara-Amitāyus),
                             both of whom can be identified with Amitābha.</p>    
                             <milestone unit="chunk" xml:id="UT22084-091-073-392"/>
