--- a/translations/kangyur/placeholders/005-001_toh2-pratimoksa_sutra.xml
+++ b/translations/kangyur/placeholders/005-001_toh2-pratimoksa_sutra.xml
@@ -4,15 +4,14 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">so sor thar pa'i mdo/</title>
+                <title type="mainTitle" xml:lang="en">The Prātimokṣa Sūtra TEST</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">prātimokṣasūtra</title>
-                <title type="mainTitle" xml:lang="en">The Prātimokṣa Sūtra</title>
-    <author role="translatorMain" ref="contributors.xml#team-9"/>
-            
-    <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
+                <title type="mainTitle" xml:lang="Bo-Ltn">so sor thar pa'i mdo/</title>
+                <author role="translatorMain" ref="contributors.xml#team-9"/>
+                <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.2 <date>2021</date>
+                <edition>v 0.1.3 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -35,10 +34,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-02-23T17:02:53.62Z" user="admin">23/02/2021 17:02:53</note>
-<note type="updated" update="translation-status" value="3" date-time="2019-12-13T09:55:28.026Z" user="john">3</note>
-<note type="updated" update="text-version" value="v 0.1.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="text-version" value="0.1.2" date-time="2021-02-23T17:02:50.644Z" user="john">Changed title to reflect Prātimokṣa decision</note>
+                <note type="lastUpdated" date-time="2022-06-27T16:24:25.658Z" user="admin">27/06/2022 16:24:25</note>
+                <note type="updated" update="translation-status" value="3" date-time="2019-12-13T09:55:28.026Z" user="john">3</note>
+                <note type="updated" update="text-version" value="v 0.1.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="text-version" value="0.1.2" date-time="2021-02-23T17:02:50.644Z" user="john">Changed title to reflect Prātimokṣa decision</note>
+                <note type="updated" update="text-version" value="0.1.3" date-time="2022-06-27T16:24:18.061Z" user="celso">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
