--- a/translations/kangyur/translations/094-003_toh726-the_tantra_on_the_origin_of_all_rites_of_tara_mother_of_all_the_tathagatas.xml
+++ b/translations/kangyur/translations/094-003_toh726-the_tantra_on_the_origin_of_all_rites_of_tara_mother_of_all_the_tathagatas.xml
@@ -6,17 +6,16 @@
       <titleStmt>
         <title type="mainTitle" xml:lang="en">The Tantra on the Origin of All Rites of Tārā, Mother
           of All the Tathāgatas</title>
+        <title type="mainTitle" xml:lang="Sa-Ltn">Sarvatathāgata­mātṛtārāviśvakarma­bhava­tantranāma</title>
+        <title type="mainTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་ཡུམ་སྒྲོལ་མ་ལས་སྣ་ཚོགས་འབྱུང་བ་ཞེས་བྱ་བའི་རྒྱུད།</title>
         <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi yum sgrol ma las
           sna tshogs ’byung ba zhes bya ba’i rgyud</title>
-        <title type="mainTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་ཡུམ་སྒྲོལ་མ་ལས་སྣ་ཚོགས་འབྱུང་བ་ཞེས་བྱ་བའི་རྒྱུད།</title>
-        <title type="mainTitle" xml:lang="Sa-Ltn">Sarvatathāgata­mātṛtārāviśvakarma­bhava­tantranāma</title>
         <title type="otherTitle" xml:lang="en">The Tantra on the Origin of All Rites of Blessed Lady
           Tārā</title>
         <title type="otherTitle" xml:lang="Bo-Ltn">bcom ldan ’das ma sgrol ma’i rgyud las sna tshogs
           bstan pa</title>
         <title type="otherTitle" xml:lang="bo">བཅོམ་ལྡན་འདས་མ་སྒྲོལ་མའི་རྒྱུད་ལས་སྣ་ཚོགས་བསྟན་པ།</title>
-        <title type="otherTitle" xml:lang="zh"/>
-        <author ref="eft:team-48" role="translatorMain">Translated by Lhasey Lotsawa Translations
+        <author role="translatorMain" ref="eft:team-48">Translated by Lhasey Lotsawa Translations
           and Publications<lb/>under the patronage and supervision of 84000: Translating the Words
           of the Buddha</author>
         <author role="translatorEng" ref="eft:person-313">Laura Dainty</author>
@@ -32,7 +31,7 @@
         <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="2">
@@ -68,7 +67,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-06-28T05:42:32.965Z" user="admin">28/06/2022 05:42:32</note>
+        <note type="lastUpdated" date-time="2022-06-28T05:43:23.852Z" user="admin">28/06/2022 05:43:23</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-13T10:52:10.736Z" user="john">v 0.1.0</note>
         <note type="updated" update="translation-status" value="3" date-time="2019-12-13T10:52:10.736Z" user="john">3</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-09-09T08:10:37.707Z" user="line-tofte">2.h</note>
@@ -108,8 +107,9 @@
         <note type="updated" update="text-version" value="0.1.20" date-time="2022-05-12T09:23:34.412Z" user="line-tofte">Auto
           (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.1.21" date-time="2022-05-12T09:24:46.858Z" user="line-tofte">Auto (update-contributors)</note>
-          <note type="updated" update="translation-status" value="2" date-time="2022-06-28T05:42:25.32Z" user="line-tofte">2</note>
-          <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-28T05:42:25.32Z" user="line-tofte">Auto (update-publication-status)</note>
+        <note type="updated" update="translation-status" value="2" date-time="2022-06-28T05:42:25.32Z" user="line-tofte">2</note>
+        <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-28T05:42:25.32Z" user="line-tofte">Auto (update-publication-status)</note>
+          <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-28T05:43:16.205Z" user="line-tofte">Auto (update-contributors)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
