--- a/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -10,13 +10,13 @@
         <title type="mainTitle" xml:lang="Bo-Ltn">gtsug tor rnam rgyal gyi gzungs rtog pa dang bcas
           pa</title>
         <title type="mainTitle" xml:lang="bo">གཙུག་ཏོར་རྣམ་རྒྱལ་གྱི་གཟུངས་རྟོག་པ་དང་བཅས་པ</title>
-        <title type="longTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུངས་རྟོག་པ་དང་བཅས་པ།</title>
-        <title type="longTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
-          par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa</title>
         <title type="longTitle" xml:lang="en">Crown Victory of All Tathāgatas: The Uṣṇīṣavijayā
           Dhāraṇī with Its Ritual Manual</title>
         <title type="longTitle" xml:lang="Sa-Ltn">Sarvatathāgata-uṣṇīṣavijayānāmadhāraṇī
           kalpasahitā</title>
+        <title type="longTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
+          par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa</title>
+        <title type="longTitle" xml:lang="bo">དེ་བཞིན་གཤེགས་པ་ཐམས་ཅད་ཀྱི་གཙུག་ཏོར་རྣམ་པར་རྒྱལ་བ་ཞེས་བྱ་བའི་གཟུངས་རྟོག་པ་དང་བཅས་པ།</title>
         <title type="otherTitle" xml:lang="zh">佛說一切如來烏瑟膩沙最勝總持經</title>
         <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi gtsug tor rnam
           par rgyal ba zhes bya ba’i gzungs rtog pa dang bcas pa/</title>
@@ -27,10 +27,11 @@
         <editor role="copyEditor" ref="eft:person-92">Laura Goetz</editor>
         <editor role="projectEditor" ref="eft:person-50">Andreas Doctor</editor>
         <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
+        <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="2">
@@ -64,9 +65,8 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-06-27T06:35:33.206Z" user="admin">27/06/2022 06:35:33</note>
+        <note type="lastUpdated" date-time="2022-06-28T06:05:07.508Z" user="admin">28/06/2022 06:05:07</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-
         <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:57:20.806Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-02T13:57:20.806Z" user="line-tofte">Auto
           (update-publication-status)</note>
@@ -74,14 +74,10 @@
         <note type="updated" update="text-version" value="0.0.3" date-time="2020-11-30T10:03:56.633Z" user="line-tofte">Auto
           (update-publication-status)</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:57:02.718Z" user="line-tofte">4</note>
-
         <note type="updated" update="text-version" value="0.0.4" date-time="2021-12-10T12:57:02.718Z" user="line-tofte">Auto
           (update-publication-status)</note>
-
         <note type="updated" update="text-version" value="0.0.5" date-time="2021-12-16T08:22:27.807Z" user="line-tofte">Auto (update-contributors)</note>
-
         <note type="updated" update="translation-status" value="3" date-time="2021-12-16T08:22:47.934Z" user="line-tofte">3</note>
-
         <note type="updated" update="text-version" value="0.0.6" date-time="2021-12-16T08:22:47.934Z" user="line-tofte">Auto
           (update-publication-status)</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2022-02-18T13:25:21.417Z" user="line-tofte">2.h</note>
@@ -106,8 +102,9 @@
           (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.0.15" date-time="2022-06-03T08:51:09.346Z" user="line-tofte">Auto (update-contributors)</note>
         <note type="updated" update="text-version" value="0.0.16" date-time="2022-06-03T08:51:40.2Z" user="line-tofte">Auto (update-contributors)</note>
-          <note type="updated" update="translation-status" value="2" date-time="2022-06-27T06:35:25.399Z" user="line-tofte">2</note>
-          <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-27T06:35:25.399Z" user="line-tofte">Auto (update-publication-status)</note>
+        <note type="updated" update="translation-status" value="2" date-time="2022-06-27T06:35:25.399Z" user="line-tofte">2</note>
+        <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-27T06:35:25.399Z" user="line-tofte">Auto (update-publication-status)</note>
+          <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-28T06:04:59.879Z" user="line-tofte">Auto (update-contributors)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
