--- a/translations/kangyur/placeholders/043-004_toh67-the_sutra_of_maitreyas_great_lions_roar.xml
+++ b/translations/kangyur/placeholders/043-004_toh67-the_sutra_of_maitreyas_great_lions_roar.xml
@@ -23,11 +23,11 @@
                 <sponsor ref="sponsors.xml#sponsor-194">Ting Xie, Guowen Xie, Xiangzhi Yu, Jiayu Xie</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.13 <date>2019</date>
+                <edition>v 0.1.14 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.b">
+            <publicationStmt status="2.a">
                 <idno xml:id="UT22084-043-004"/>
                 <date/>
             </publicationStmt>
@@ -43,7 +43,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-29T13:06:30.122Z" user="admin">29/06/2022 13:06:30</note>
+                <note type="lastUpdated" date-time="2022-06-29T13:07:28.309Z" user="admin">29/06/2022 13:07:28</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-09T07:11:15.835Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2019-12-11T09:08:42.75Z" user="andreas">2.g</note>
                 <note type="updated" update="text-version" value="v 0.1.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
@@ -65,6 +65,8 @@
                 <note type="updated" update="text-version" value="0.1.11" date-time="2022-06-27T12:13:37.249Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.1.12" date-time="2022-06-29T13:05:57.533Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="text-version" value="0.1.13" date-time="2022-06-29T13:06:28.086Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.a" date-time="2022-06-29T13:07:22.573Z" user="line-tofte">2.a</note>
+                <note type="updated" update="text-version" value="0.1.14" date-time="2022-06-29T13:07:22.573Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
