--- a/translations/kangyur/placeholders/035-013_toh44-13-chapter_13_the_truths_of_the_noble_ones.xml
+++ b/translations/kangyur/placeholders/035-013_toh44-13-chapter_13_the_truths_of_the_noble_ones.xml
@@ -6,7 +6,7 @@
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">Chapter 13: The Truths of the Noble Ones</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">'phags pa bden pa'i le'u/</title>
-                <title type="otherTitle" xml:lang="zh">聖諦品</title>
+                <title type="otherTitle" xml:lang="zh">《華嚴經 》之《聖諦品》</title>
                 <author role="translatorMain" ref="eft:team-33"/>
                 <author role="translatorEng" ref="eft:person-199">Geshe Lozang Jamspal</author>
                 <author role="translatorEng" ref="eft:person-200">Kaia Fischer</author>
@@ -18,7 +18,7 @@
                 <sponsor ref="sponsors.xml#sponsor-193">Nicholas Weeks</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.5 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -38,12 +38,15 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-03-30T09:45:24.718Z" user="admin">30/03/2022 09:45:24</note>
+                <note type="lastUpdated" date-time="2022-06-29T15:42:26.037Z" user="admin">29/06/2022 15:42:26</note>
                 <note type="updated" update="text-version" value="" date-time="2019-03-09T12:30:13.816Z" user="john"/>
                 <note type="updated" update="translation-status" value="3" date-time="2019-03-09T12:30:13.816Z" user="john">3</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-22T13:10:01.446Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-03-30T09:43:38.133Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-03-30T09:43:38.133Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-03-30T09:45:18.945Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-22T13:10:01.446Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2022-03-30T09:43:38.133Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-03-30T09:43:38.133Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-03-30T09:45:18.945Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-06-29T15:42:18.5Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
