--- a/translations/kangyur/placeholders/035-014_toh44-14-chapter_14_the_awakening_through_the_tathagatas_rays_of_light.xml
+++ b/translations/kangyur/placeholders/035-014_toh44-14-chapter_14_the_awakening_through_the_tathagatas_rays_of_light.xml
@@ -4,19 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i 'od zer las rnam par sangs rgyas pa le'u/</title>
                 <title type="mainTitle" xml:lang="en">Chapter 14: The Awakening Through the Tathāgata's Rays of Light</title>
-                <title type="otherTitle" xml:lang="zh">如來光明正等覺品</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i 'od zer las rnam par sangs rgyas pa le'u/</title>
+                <title type="otherTitle" xml:lang="zh">《華嚴經 》之《如來光明正等覺品》</title>
                 <author role="translatorMain" ref="contributors.xml#team-33"/>
                 <author role="translatorEng" ref="contributors.xml#person-199">Dr. Geshe Lozang Jamspal</author>
                 <author role="translatorEng" ref="contributors.xml#person-200">Kaia Fischer</author>
+                <consultant role="projectManager" ref="contributors.xml#person-200">Kaia Fischer</consultant>
                 <sponsor ref="sponsors.xml#sponsor-16">Richard and Carol Weingarten</sponsor>
                 <sponsor ref="sponsors.xml#sponsor-193">Nicholas Weeks</sponsor>
-            
-    <consultant role="projectManager" ref="contributors.xml#person-200">Kaia Fischer</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>0.0.1 <date>2020</date>
+                <edition>v 0.0.2 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -36,11 +35,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-30T08:55:52.799Z" user="admin">30/04/2020 08:55:52</note>
+                <note type="lastUpdated" date-time="2022-06-29T15:43:42.445Z" user="admin">29/06/2022 15:43:42</note>
                 <note type="updated" update="text-version" value="" date-time="2019-03-09T12:31:57.992Z" user="john"/>
                 <note type="updated" update="translation-status" value="3" date-time="2019-03-09T12:31:57.992Z" user="john">3</note>
-            
-<note type="updated" update="text-version" value="0.0.1" date-time="2020-01-10T07:02:55.642Z" user="andreas">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-01-10T07:02:55.642Z" user="andreas">0.0.1</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-29T15:43:34.927Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
