--- a/translations/kangyur/placeholders/035-015_toh44-15-chapter_15_the_illumination_of_the_bodhisattvas_questions.xml
+++ b/translations/kangyur/placeholders/035-015_toh44-15-chapter_15_the_illumination_of_the_bodhisattvas_questions.xml
@@ -4,19 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">byang chub sems dpas dris pa snang ba le'u/</title>
                 <title type="mainTitle" xml:lang="en">Chapter 15: The Illumination of the Bodhisattva's Questions</title>
-                <title type="otherTitle" xml:lang="zh">菩薩所問顯明品</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">byang chub sems dpas dris pa snang ba le'u/</title>
+                <title type="otherTitle" xml:lang="zh">《華嚴經 》之《菩薩所問顯明品》</title>
                 <author role="translatorMain" ref="contributors.xml#team-33"/>
                 <author role="translatorEng" ref="contributors.xml#person-199">Dr. Geshe Lozang Jamspal</author>
                 <author role="translatorEng" ref="contributors.xml#person-200">Kaia Fischer</author>
+                <consultant role="projectManager" ref="contributors.xml#person-200">Kaia Fischer</consultant>
                 <sponsor ref="sponsors.xml#sponsor-16">Richard and Carol Weingarten</sponsor>
                 <sponsor ref="sponsors.xml#sponsor-193">Nicholas Weeks</sponsor>
-            
-    <consultant role="projectManager" ref="contributors.xml#person-200">Kaia Fischer</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -36,11 +35,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-30T08:56:43.666Z" user="admin">30/04/2020 08:56:43</note>
+                <note type="lastUpdated" date-time="2022-06-29T15:44:59.017Z" user="admin">29/06/2022 15:44:59</note>
                 <note type="updated" update="text-version" value="" date-time="2019-03-09T12:33:39.066Z" user="john"/>
                 <note type="updated" update="translation-status" value="3" date-time="2019-03-09T12:34:30.783Z" user="john">3</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-29T15:44:51.483Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
