--- a/translations/kangyur/placeholders/035-017_toh44-17-chapter_17_bhadrasri.xml
+++ b/translations/kangyur/placeholders/035-017_toh44-17-chapter_17_bhadrasri.xml
@@ -4,9 +4,9 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">bzang po'i dpal gyi le'u/</title>
                 <title type="mainTitle" xml:lang="en">Chapter 17: Bhadraśrī</title>
-                <title type="otherTitle" xml:lang="zh">賢吉祥品</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">bzang po'i dpal gyi le'u/</title>
+                <title type="otherTitle" xml:lang="zh">《華嚴經 》之《賢吉祥品》</title>
                 <author role="translatorMain" ref="contributors.xml#team-33"/>
                 <author role="translatorEng" ref="contributors.xml#person-199">Dr. Geshe Lozang Jamspal</author>
                 <author role="translatorEng" ref="contributors.xml#person-200">Kaia Fischer</author>
@@ -14,7 +14,7 @@
                 <sponsor ref="sponsors.xml#sponsor-193">Nicholas Weeks</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2020</date>
+                <edition>v 0.0.3 <date>2020</date>
                 </edition>
             </editionStmt>
 
@@ -34,13 +34,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-12-13T10:29:23.24Z" user="admin">13/12/2021 10:29:23</note>
+                <note type="lastUpdated" date-time="2022-06-29T15:47:22.343Z" user="admin">29/06/2022 15:47:22</note>
                 <note type="updated" update="text-version" value="" date-time="2019-03-09T12:36:13.053Z" user="john"/>
                 <note type="updated" update="translation-status" value="3" date-time="2019-03-09T12:36:13.053Z" user="john">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-01-10T07:04:14.488Z" user="andreas">0.0.1</note>
-            
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-13T10:29:19.292Z" user="john">0.0.2</note>
-</notesStmt>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-13T10:29:19.292Z" user="john">0.0.2</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-29T15:47:14.835Z" user="cabie-sim">Auto (update-titles)</note>
+            </notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
