--- a/translations/kangyur/placeholders/036-003_toh44-32-chapter_32_the_teaching_of_samantabhadra.xml
+++ b/translations/kangyur/placeholders/036-003_toh44-32-chapter_32_the_teaching_of_samantabhadra.xml
@@ -4,15 +4,15 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">kun bzang bstan pa'i le'u/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">samantabhadracāryanirdeśa</title>
                 <title type="mainTitle" xml:lang="en">Chapter 32: The Teaching of Samantabhadra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">samantabhadracāryanirdeśa</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">kun bzang bstan pa'i le'u/</title>
+                <title type="otherTitle" xml:lang="zh">《華嚴經 》之《普賢品》</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa kun tu bzang po'i spyod pa bstan pa/</title>
-                <title type="otherTitle" xml:lang="zh">普賢品</title>
                 <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date/>
+                <edition>v 0.0.4 <date/>
                 </edition>
             </editionStmt>
             <publicationStmt status="">
@@ -30,9 +30,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-11T05:14:45.845Z" user="admin">11/05/2021 05:14:45</note>
+                <note type="lastUpdated" date-time="2022-06-29T15:48:32.49Z" user="admin">29/06/2022 15:48:32</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:18:49.214Z" user="amy">Auto (update-sponsorship)</note>
-            <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-11T05:14:43.021Z" user="amy">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-11T05:14:43.021Z" user="amy">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-06-29T15:48:30.507Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
