--- a/translations/kangyur/placeholders/036-006_toh44-35-chapter_35_the_acceptances.xml
+++ b/translations/kangyur/placeholders/036-006_toh44-35-chapter_35_the_acceptances.xml
@@ -4,13 +4,13 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">bzod pa'i le'u/</title>
                 <title type="mainTitle" xml:lang="en">Chapter 35: The Acceptances</title>
-                <title type="otherTitle" xml:lang="zh">十忍品</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">bzod pa'i le'u/</title>
+                <title type="otherTitle" xml:lang="zh">《華嚴經 》之《十忍品》</title>
                 <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date/>
+                <edition>v 0.0.3 <date/>
                 </edition>
             </editionStmt>
             <publicationStmt status="">
@@ -28,9 +28,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-11T05:16:58.176Z" user="admin">11/05/2021 05:16:58</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:18:08.044Z" user="amy">Auto (update-sponsorship)</note>
+                <note type="lastUpdated" date-time="2022-06-29T15:52:24.657Z" user="admin">29/06/2022 15:52:24</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:18:08.044Z" user="amy">Auto (update-sponsorship)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-11T05:16:55.376Z" user="amy">Auto (update-titles)</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-29T15:52:22.657Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
