--- a/translations/kangyur/translations/039-002_toh46-the_teaching_on_clearing_the_boundless_gates.xml
+++ b/translations/kangyur/translations/039-002_toh46-the_teaching_on_clearing_the_boundless_gates.xml
@@ -4,22 +4,18 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">sgo mtha’ yas pa rnam par sbyong ba bstan
-                    pa’i le’u</title>
-                <title type="mainTitle" xml:lang="bo">སྒོ་མཐའ་ཡས་པ་རྣམ་པར་སྦྱོང་བ་བསྟན་པའི་ལེའུ།</title>
+                <title type="mainTitle" xml:lang="en">The Chapter Teaching the Purification of Boundless Gateways</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Ananta­mukhapariśo­dhana­nirdeśaparivarta</title>
-                <title type="mainTitle" xml:lang="en">The Chapter Teaching the Purification of
-                    Boundless Gateways</title>
-                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa sgo mtha’ yas pa rnam par sbyong
-                    ba bstan pa’i le’u zhes bya ba theg pa chen po’i mdo</title>
-                <title type="longTitle" xml:lang="bo">འཕགས་པ་སྒོ་མཐའ་ཡས་པ་རྣམ་པར་སྦྱོང་བ་བསྟན་པའི་ལེའུ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                <title type="mainTitle" xml:lang="bo">སྒོ་མཐའ་ཡས་པ་རྣམ་པར་སྦྱོང་བ་བསྟན་པའི་ལེའུ།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">sgo mtha’ yas pa rnam par sbyong ba bstan pa’i le’u</title>
+                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Chapter Teaching the Purification of Boundless Gateways”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Āryānantamukhapariśodhananirdeśaparivartanāmamahāyānasūtra</title>
-                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Chapter
-                    Teaching the Purification of Boundless Gateways”</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa sgo mtha’ yas pa rnam par sbyong ba bstan pa’i le’u zhes bya ba theg pa chen po’i mdo</title>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་སྒོ་མཐའ་ཡས་པ་རྣམ་པར་སྦྱོང་བ་བསྟན་པའི་ལེའུ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryānantamukhaviśodhananirdeśanāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Ananta­mukha­viśo­dhana­nirdeśasūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Ananta­mukha­viśo­dhana­nirdeśa</title>
-                <title type="otherTitle" xml:lang="zh">指示淨化無量門經 (大寳積經無邊莊嚴會)</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Ananta­mukha­viśo­dhana­nirdeśasūtra</title>
+                <title type="otherTitle" xml:lang="zh">《淨化無量門經》（大正藏：《大寳積經無邊莊嚴會》）</title>
                 <author role="translatorMain" ref="contributors.xml#team-9">Translated by the
                     Dharmachakra Translation Committee<lb/>under the patronage and supervision of
                     84000: Translating the Words of the Buddha</author>
@@ -43,7 +39,7 @@
                 <sponsor ref="sponsors.xml#sponsor-22">Qiang Li (李强) and Ya Wen (文雅)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.4 <date>2021</date>
+                <edition>v 1.0.6 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -80,8 +76,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-05-19T14:45:03.127Z" user="laura">19/05/2021 14:45:03</note>
-
+                <note type="lastUpdated" date-time="2022-06-29T15:55:50.854Z" user="admin">29/06/2022 15:55:50</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-03T07:46:54.268Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2019-12-03T07:47:20.13Z" user="andreas">2.e</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2019-12-09T09:32:19.448Z" user="andreas">2.d</note>
@@ -90,23 +85,22 @@
                 <note type="updated" update="translation-status" value="2.c" date-time="2020-03-16T14:06:39.492Z" user="line-tofte">2.c</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2020-05-04T12:25:22.123Z" user="line-tofte">2.b</note>
                 <note type="updated" update="translation-status" value="2.a" date-time="2020-05-04T14:24:33.451Z" user="mike">2.a</note>
-
                 <note type="updated" update="text-version" value="v 0.1.1" date-time="2020-05-16T11:07:36.468Z" user="andre">1st mark-up round completed -
                     issues still pending</note>
                 <note type="updated" update="translation-status" value="2" date-time="2020-05-25T08:24:30.469Z" user="mike">2</note>
                 <note type="updated" update="text-version" value="v 0.2.1" date-time="2020-05-28T10:11:33.885Z" user="mike">added sponsorship
                     acknowledgment</note>
-
                 <note type="updated" update="text-version" value="0.2.2" date-time="2020-08-31T18:25:42.279Z" user="laura">edited acknowledgement</note>
                 <note type="updated" update="text-version" value="0.2.3" date-time="2020-09-14T14:21:09.97Z" user="line-tofte">Auto
                     (update-contributors)</note>
-            
-    <note type="updated" update="translation-status" value="1" date-time="2020-10-02T21:24:52.085Z" user="mike">1</note>
-    <note type="updated" update="text-version" value="1.0.0" date-time="2020-10-02T21:24:52.085Z" user="mike">First published version</note>
-    <note type="updated" update="text-version" value="1.0.1" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
-    <note type="updated" update="text-version" value="1.0.2" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
-    <note type="updated" update="text-version" value="1.0.3" date-time="2021-02-12T18:01:00.367Z" user="celso">"scholar" to "preceptor" in colophon</note>
-    <note type="updated" update="text-version" value="1.0.4" date-time="2021-04-21T21:41:04.027Z" user="celso">add @xml:lang tag to  a few Chinese strings that were missing</note>
+                <note type="updated" update="translation-status" value="1" date-time="2020-10-02T21:24:52.085Z" user="mike">1</note>
+                <note type="updated" update="text-version" value="1.0.0" date-time="2020-10-02T21:24:52.085Z" user="mike">First published version</note>
+                <note type="updated" update="text-version" value="1.0.1" date-time="2020-11-23T13:57:44.998Z" user="admin">Auto (TEI migration 2.0.0)</note>
+                <note type="updated" update="text-version" value="1.0.2" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
+                <note type="updated" update="text-version" value="1.0.3" date-time="2021-02-12T18:01:00.367Z" user="celso">"scholar" to "preceptor" in colophon</note>
+                <note type="updated" update="text-version" value="1.0.4" date-time="2021-04-21T21:41:04.027Z" user="celso">add @xml:lang tag to  a few Chinese strings that were missing</note>
+                <note type="updated" update="text-version" value="1.0.5" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>
+                <note type="updated" update="text-version" value="1.0.6" date-time="2022-06-29T15:55:43.271Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -2661,7 +2655,7 @@
                             vajreya­su­pratiṣṭhita pramar­dhana-upa-asurānāṃ
                             devana-adhi­patima­sādha puraskṛtopi devehi śova­sebha­sava­sadha
                             purandara­mahā­ketu­tāpesi asu­samada dhvaja­granta
-                            pāpa­śyintā­vidhyāṃ-sita­mahā-asura-indra­sapala­vanti­bhi­tatrasta­diśo­diśa
+                            pāpa­śyintā­vidhyāṃ-sita­mahā-<term type="ignore">asura</term>-indra­sapala­vanti­bhi­tatrasta­diśo­diśa
                             namana­buddha­syakīrtiśye nāma­gotra­namahāyaśa deva­purasmi­saṃgrame
                             buddha­śapata-anuttaraṃ-śrāvisi­deva­vijaya namo buddha­vibhāśita
                             saṃkrāma­chandasi­vidyā­buddha­nāmen­bhahitā vijaye­sotata deva-asuraś
@@ -4558,14 +4552,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-039-002-466">
+                        <gloss xml:id="UT22084-039-002-466" type="term" mode="match">
                             <term>Blessed one</term>
-                            <term xml:lang="Bo-Ltn">bcom ldan ’das </term>
+                            <term xml:lang="Bo-Ltn">bcom ldan ’das</term>
                             <term xml:lang="bo">བཅོམ་ལྡན་འདས།</term>
                             <term xml:lang="Sa-Ltn">bhagavān</term>
                             <term xml:lang="Sa-Ltn">bhagavat</term>
-                            <term type="definition">An epithet of a buddha, used in this text to
-                                refer to the Buddha Śākyamuni.</term>
+                            <term type="definition">An epithet of a buddha, used in this text to refer to the Buddha Śākyamuni.</term>
                         </gloss>
                     </item>
                     <item>
@@ -4726,14 +4719,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-039-002-433">
+                        <gloss xml:id="UT22084-039-002-433" type="place" mode="match">
                             <term>Brahmā realms</term>
-                            <term xml:lang="Bo-Ltn">tshang pa’i ’jig rten </term>
-                            <term xml:lang="bo">ཚང་པའི་འཇིག་རྟེན།</term>
+                            <term xml:lang="Bo-Ltn">tshangs pa’i ’jig rten</term>
+                            <term xml:lang="bo">ཚངས་པའི་འཇིག་རྟེན།</term>
                             <term xml:lang="Sa-Ltn">Brahmāloka</term>
-                            <term type="definition">The first three heavens of the <term>form
-                                    realm</term>, ruled over by the god Brahmā, who believes himself
-                                to be the creator of the universe.</term>
+                            <term type="definition">The first three heavens of the <term>form realm</term>, ruled over by the god Brahmā, who believes himself to be the creator of the universe.</term>
                         </gloss>
                     </item>
                     <item>
