--- a/translations/kangyur/placeholders/039-003_toh47-the_teaching_on_the_unfathomable_secrets_of_the_tathagatas.xml
+++ b/translations/kangyur/placeholders/039-003_toh47-the_teaching_on_the_unfathomable_secrets_of_the_tathagatas.xml
@@ -4,24 +4,23 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i gsang ba bsam gyis mi khyab pa bstan pa'i mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">tathāgatācintyaguhyanirdeśasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Teaching on the Unfathomable Secrets of the Tathāgatas</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa'i gsang ba bsam gyis mi khyab pa bstan pa zhes bya ba theg pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">tathāgatācintyaguhyanirdeśasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa'i gsang ba bsam gyis mi khyab pa bstan pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryatathāgatācintyaguhya­nirdeśanāma­mahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">tathāgatācintyaguhyanirdeśa</title>
-                <title type="otherTitle" xml:lang="zh">如來不可思議秘密經</title>
-                <title type="otherTitle" xml:lang="zh">（大正藏：大寶積經密迹金剛力士會第三）</title>
+                <title type="otherTitle" xml:lang="zh">《如來不可思議秘密經》（大正藏：《大寶積經密迹金剛力士會第三》）</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa'i gsang ba bsam gyis mi khyab pa bstan pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-9">Dharmachakra Translation Committee</author>
                 <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chökyi Nyima Rinpoche</consultant>
                 <author role="translatorEng" ref="contributors.xml#person-75">Timothy Hinkle</author>
                 <author role="translatorEng" ref="contributors.xml#person-50">Andreas Doctor</author>
+                <consultant role="advisor" ref="contributors.xml#person-116">Dr. Ulrich Pagel</consultant>
+                <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
                 <sponsor ref="sponsors.xml#sponsor-7">Leo Tong Chen and his family</sponsor>
-            <consultant role="advisor" ref="contributors.xml#person-116">Dr. Ulrich Pagel</consultant>
-    <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -41,10 +40,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-24T11:35:40.792Z" user="admin">24/04/2020 11:35:40</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:58:19.044Z" user="mike">2.h</note>
+                <note type="lastUpdated" date-time="2022-06-29T15:57:09.402Z" user="admin">29/06/2022 15:57:09</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T12:58:19.044Z" user="mike">2.h</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-29T15:57:01.899Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
