--- a/translations/kangyur/placeholders/040-001_toh50-the_array_of_the_tathagata_aksobhya.xml
+++ b/translations/kangyur/placeholders/040-001_toh50-the_array_of_the_tathagata_aksobhya.xml
@@ -8,14 +8,14 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">akṣobhyatathāgatasya vyūhasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mi 'khrugs pa'i bkod pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryākṣobhyatathāgatasya vyūhanāma­mahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh">不動如來莊嚴經 (大寶積經不動如來會第六)</title>
+                <title type="otherTitle" xml:lang="zh">《不動如來莊嚴經》（大正藏：《大寶積經不動如來會第六》）</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa mi 'khrugs pa'i bkod pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" ref="eft:team-67"/>
                 <author role="translatorEng" ref="eft:person-409">Tenzin Bhuchung</author>
                 <sponsor ref="sponsors.xml#sponsor-5">Zhou Tian Yu, Chen Yi Qin, Irene Tillman, Archie Kao, Zhou Xun, Zhao Xuan</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.8 <date>2020</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="3">
@@ -34,14 +34,20 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-23T08:45:52.757Z" user="admin">23/05/2022 08:45:52</note>
-            
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-08-19T10:28:19.563Z" user="admin">0.0.1</note>
-    <note type="updated" update="publication-date" value="" date-time="2020-08-19T10:28:19.563Z" user="admin"/>
-    <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:34:42.324Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-02T13:34:42.324Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="translation-status" value="" date-time="2020-11-30T10:03:09.191Z" user="line-tofte"/>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2020-11-30T10:03:09.191Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="4" date-time="2022-05-02T10:45:25.923Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-02T10:45:25.923Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-23T08:44:51.052Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-05-23T08:44:51.052Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.6" date-time="2022-05-23T08:45:19.58Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-23T08:45:47.264Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="lastUpdated" date-time="2022-06-29T15:58:13.419Z" user="admin">29/06/2022 15:58:13</note>
+                <note type="updated" update="text-version" value="0.0.1" date-time="2020-08-19T10:28:19.563Z" user="admin">0.0.1</note>
+                <note type="updated" update="publication-date" value="" date-time="2020-08-19T10:28:19.563Z" user="admin"/>
+                <note type="updated" update="translation-status" value="4" date-time="2020-10-02T13:34:42.324Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2020-10-02T13:34:42.324Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="" date-time="2020-11-30T10:03:09.191Z" user="line-tofte"/>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2020-11-30T10:03:09.191Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="4" date-time="2022-05-02T10:45:25.923Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2022-05-02T10:45:25.923Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="3" date-time="2022-05-23T08:44:51.052Z" user="line-tofte">3</note>
+                <note type="updated" update="text-version" value="0.0.5" date-time="2022-05-23T08:44:51.052Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="text-version" value="0.0.6" date-time="2022-05-23T08:45:19.58Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2022-05-23T08:45:47.264Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="text-version" value="0.0.8" date-time="2022-06-29T15:58:05.916Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
