--- a/translations/kangyur/placeholders/040-007_toh56-the_bodhisattvas_scriptural_collection.xml
+++ b/translations/kangyur/placeholders/040-007_toh56-the_bodhisattvas_scriptural_collection.xml
@@ -4,26 +4,25 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">byang chub sems dpa'i sde snod kyi mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">bodhisattvapiṭakasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Bodhisattva’s Scriptural Collection</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byang chub sems dpa'i sde snod ces bya ba thegs pa chen po'i mdo</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">bodhisattvapiṭakasūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">byang chub sems dpa'i sde snod kyi mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryabodhisattva­piṭaka­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="zh">菩薩藏經</title>
-                <title type="otherTitle" xml:lang="zh">（大正藏：大寶積經菩薩藏會第十二）</title>
+                <title type="otherTitle" xml:lang="zh">《菩薩藏經》（大正藏：《大寶積經菩薩藏會第十二》）</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byang chub sems dpa'i sde snod ces bya ba thegs pa chen po'i mdo</title>
                 <author role="translatorMain" ref="contributors.xml#team-32">The Norwegian Institute of Palaeography and Historical Philology (PHI)</author>
                 <author role="translatorEng" ref="contributors.xml#person-195">Jens Braarvig</author>
                 <author role="translatorEng" ref="contributors.xml#person-196">David Welsh</author>
                 <author role="translatorEng" ref="contributors.xml#person-197">Fredrik Liland</author>
                 <author role="translatorEng" ref="contributors.xml#person-198">Andrew Skilton</author>
-            <sponsor ref="sponsors.xml#sponsor-6">Chang Tai Kwang</sponsor>
                 <editor role="externalReviewer" ref="contributors.xml#person-281">Paul Harrison</editor>
                 <editor role="externalReviewer" ref="contributors.xml#person-76">Wiesiek Mical</editor>
                 <editor role="finalReviewer" ref="contributors.xml#person-230">Tom Tillemans</editor>
-    <consultant role="projectManager" ref="contributors.xml#person-195">Jens Braarvig</consultant>
+                <consultant role="projectManager" ref="contributors.xml#person-195">Jens Braarvig</consultant>
+                <sponsor ref="sponsors.xml#sponsor-6">Chang Tai Kwang</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2019</date>
+                <edition>v 0.0.2 <date>2019</date>
                 </edition>
             </editionStmt>
 
@@ -45,11 +44,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2020-04-23T10:54:51.385Z" user="admin">23/04/2020 10:54:51</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-<note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:02.591Z" user="mike">2.f</note>
-<note type="updated" update="translation-status" value="2.g" date-time="2020-03-13T08:35:26.842Z" user="andreas">2.g</note>
+                <note type="lastUpdated" date-time="2022-06-29T16:00:52.095Z" user="admin">29/06/2022 16:00:52</note>
+                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
+                <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:02.591Z" user="mike">2.f</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2020-03-13T08:35:26.842Z" user="andreas">2.g</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-29T16:00:44.607Z" user="cabie-sim">Auto (update-titles)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
